--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,22 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Home.Associate_Home</td>
+<td>com.MyCustomers.My_customers</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TCBA01102</td>
+<td>TCBA01401</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TCBA01103</td>
+<td>TCBA01402</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TCBA01101</td>
+<td>TCBA01403</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
