--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b7d71">  <td>18/10/08 16:51:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@18067a5]">TCBA01101</td> 
-  <td>main@3714657</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/08 16:51:40</td>   <td>4619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@18067a5]">TCBA01102</td> 
-  <td>main@3714657</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/08 16:52:02</td>   <td>27371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@18067a5]">TCBA01103</td> 
-  <td>main@3714657</td>   <td></td> </tr>
-<tr bgcolor="657a99">  <td>18/10/08 16:51:22</td>   <td>-13426</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@18067a5]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3714657</td>   <td></td> </tr>
-<tr bgcolor="657a99">  <td>18/10/08 16:52:05</td>   <td>29872</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@18067a5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3714657</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/09 16:55:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01401()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01401</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/09 16:55:45</td>   <td>4484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01402()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01402</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/09 16:55:50</td>   <td>9435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01403()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01403</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/09 16:55:31</td>   <td>-9757</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/09 16:57:42</td>   <td>121599</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
 </table>
