--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67c1fc">  <td>18/10/09 16:55:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/09 16:55:40</td>   <td>9757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01401()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01401</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/09 16:55:45</td>   <td>14241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01402()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01402</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/09 16:55:50</td>   <td>19192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="My_customers.TCBA01403()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">TCBA01403</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>18/10/09 16:57:42</td>   <td>131356</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.MyCustomers.My_customers@14ba872]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>18/10/10 18:19:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/10 18:19:25</td>   <td>15278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01101</td> 
+  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/10 18:19:30</td>   <td>19951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01102</td> 
+  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/10 18:19:52</td>   <td>42364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01103</td> 
+  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>18/10/10 18:19:55</td>   <td>44761</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
 </table>
