--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>18/10/10 18:19:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 18:19:25</td>   <td>15278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01101</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 18:19:30</td>   <td>19951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01102</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 18:19:52</td>   <td>42364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01103</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/10 18:19:55</td>   <td>44761</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>18/10/11 18:31:15</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:40</td>   <td>25527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01001</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:40</td>   <td>25541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01002</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:41</td>   <td>26362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01003</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:41</td>   <td>26793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01004</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:42</td>   <td>27221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01005</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:44</td>   <td>29690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01006</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:48</td>   <td>33293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01007</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/11 18:31:51</td>   <td>36479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01009()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01009</td> 
+  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>18/10/11 18:31:55</td>   <td>40020</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
 </table>
