--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,44 +31,26 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">40.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi">0</td><td class="numi">47.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.Home.Associate_Login</td><td><a href="#m1"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1539262908411</td><td class="numi">3185</td></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="7">com.Home.Associate_Login</td><td><a href="#m2"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1539262900646</td><td class="numi">12</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1539262900660</td><td class="numi">818</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1539262901481</td><td class="numi">429</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1539262901912</td><td class="numi">427</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1539262902340</td><td class="numi">2468</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1539262904809</td><td class="numi">3601</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01009</b>  </a></td><td class="numi">1</td><td>1539262911598</td><td class="numi">3539</td></tr>
+<tr class="passedodd"><td rowspan="7">com.Home.Associate_Login</td><td><a href="#m1"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1539326795285</td><td class="numi">777</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1539326796063</td><td class="numi">732</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1539326796796</td><td class="numi">417</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1539326797214</td><td class="numi">2502</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1539326799717</td><td class="numi">3510</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1539326803229</td><td class="numi">10132</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1539326813363</td><td class="numi">3565</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.Home.Associate_Login:TCBA01007</h2>
-<div style="padding-left:3em">
-<p>expected [You have been locked out. Please contact support.] but found [Log In
-User Name
-Password
-Log in
-Forgot your password? | Forgot your username?]</p>
-org.testng.Assert.fail(Assert.java:94)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
-<br/>at org.testng.Assert.assertEquals(Assert.java:123)
-<br/>at org.testng.Assert.assertEquals(Assert.java:176)
-<br/>at org.testng.Assert.assertEquals(Assert.java:186)
-<br/>at com.Home.Associate_Login.TCBA01007(Associate_Login.java:217)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">com.Home.Associate_Login:TCBA01008</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.Home.Associate_Login:TCBA01005</h2>
+<h2 id="m2">com.Home.Associate_Login:TCBA01003</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">com.Home.Associate_Login:TCBA01004</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.Home.Associate_Login:TCBA01003</h2>
+<h2 id="m4">com.Home.Associate_Login:TCBA01001</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.Home.Associate_Login:TCBA01006</h2>
+<h2 id="m5">com.Home.Associate_Login:TCBA01002</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.Home.Associate_Login:TCBA01002</h2>
+<h2 id="m6">com.Home.Associate_Login:TCBA01005</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.Home.Associate_Login:TCBA01009</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.Home.Associate_Login:TCBA01001</h2>
+<h2 id="m7">com.Home.Associate_Login:TCBA01006</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
