--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01001</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:40</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01002</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:41</td>   <td>835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01003</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:41</td>   <td>1266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01004</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:42</td>   <td>1694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01005</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:44</td>   <td>4163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01006</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:48</td>   <td>7766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01007</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/11 18:31:51</td>   <td>10952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01009()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01009</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>18/10/11 18:31:15</td>   <td>-25527</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>18/10/11 18:31:55</td>   <td>14493</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01001</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:36</td>   <td>778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01002</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:36</td>   <td>1511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01003</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:37</td>   <td>1929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01004</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:39</td>   <td>4432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01005</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:43</td>   <td>7944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01006</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/12 12:16:53</td>   <td>18078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.Home.Associate_Login@4f30ec]">TCBA01008</td> 
+  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>18/10/12 12:16:09</td>   <td>-25938</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Login@4f30ec]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
+<tr bgcolor="aaf0a4">  <td>18/10/12 12:16:56</td>   <td>21645</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Login@4f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3288358</td>   <td></td> </tr>
 </table>
