--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>D:\Users\Akhil-TS\AppData\Local\Temp\testng-eclipse--120185700\testng-customsuite.xml</span>
+                    <span>D:\Users\Akhil-TS\AppData\Local\Temp\testng-eclipse--1594307045\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -127,6 +127,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Home.Associate_Login" hash-for-method="TCBA01006">TCBA01006</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Home.Associate_Login" hash-for-method="TCBA01007">TCBA01007</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -196,6 +201,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="TCBA01007">
+                  </a> <!-- TCBA01007 -->
+                  <span class="method-name">TCBA01007</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="TCBA01008">
                   </a> <!-- TCBA01008 -->
                   <span class="method-name">TCBA01008</span>
@@ -206,7 +218,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Users\Akhil-TS\AppData\Local\Temp\testng-eclipse--120185700\testng-customsuite.xml</span>
+            <span class="header-content">D:\Users\Akhil-TS\AppData\Local\Temp\testng-eclipse--1594307045\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -255,40 +267,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TCBA01006')
+data.setCell(0, 1, 'TCBA01007')
 data.setCell(0, 2, 'com.Home.Associate_Login')
-data.setCell(0, 3, 10132);
+data.setCell(0, 3, 10088);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TCBA01008')
+data.setCell(1, 1, 'TCBA01006')
 data.setCell(1, 2, 'com.Home.Associate_Login')
-data.setCell(1, 3, 3565);
+data.setCell(1, 3, 3594);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TCBA01005')
+data.setCell(2, 1, 'TCBA01008')
 data.setCell(2, 2, 'com.Home.Associate_Login')
-data.setCell(2, 3, 3510);
+data.setCell(2, 3, 3560);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TCBA01004')
+data.setCell(3, 1, 'TCBA01005')
 data.setCell(3, 2, 'com.Home.Associate_Login')
-data.setCell(3, 3, 2502);
+data.setCell(3, 3, 3521);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'TCBA01001')
+data.setCell(4, 1, 'TCBA01004')
 data.setCell(4, 2, 'com.Home.Associate_Login')
-data.setCell(4, 3, 777);
+data.setCell(4, 3, 2506);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'TCBA01002')
+data.setCell(5, 1, 'TCBA01001')
 data.setCell(5, 2, 'com.Home.Associate_Login')
-data.setCell(5, 3, 732);
+data.setCell(5, 3, 713);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'TCBA01003')
 data.setCell(6, 2, 'com.Home.Associate_Login')
-data.setCell(6, 3, 417);
+data.setCell(6, 3, 488);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'TCBA01002')
+data.setCell(7, 2, 'com.Home.Associate_Login')
+data.setCell(7, 3, 447);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -321,35 +337,39 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TCBA01001</span>
-                <span class="method-start">25942 ms</span>
+                <span class="method-start">9523 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01002</span>
-                <span class="method-start">26720 ms</span>
+                <span class="method-start">10237 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01003</span>
-                <span class="method-start">27453 ms</span>
+                <span class="method-start">10685 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01004</span>
-                <span class="method-start">27871 ms</span>
+                <span class="method-start">11175 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01005</span>
-                <span class="method-start">30374 ms</span>
+                <span class="method-start">13683 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01006</span>
-                <span class="method-start">33886 ms</span>
+                <span class="method-start">17205 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TCBA01007</span>
+                <span class="method-start">20800 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TCBA01008</span>
-                <span class="method-start">44020 ms</span>
+                <span class="method-start">30890 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">47587 ms</span>
+                <span class="method-start">34452 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
