--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,37 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="687592">  <td>18/10/15 12:47:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01001</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:28</td>   <td>817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01002</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:28</td>   <td>1286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01003</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:29</td>   <td>1802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01004</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:31</td>   <td>4287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01005</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:35</td>   <td>7820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01006</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:39</td>   <td>11329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01007</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/15 12:47:49</td>   <td>21507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01008</td> 
-  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/15 12:47:16</td>   <td>-11165</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/15 12:47:52</td>   <td>25085</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
-=======
-<tr bgcolor="9b7d71">  <td>18/10/16 17:58:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01101</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/16 17:58:22</td>   <td>3987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01102</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/16 17:58:38</td>   <td>20225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01103</td> 
-  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>18/10/16 17:58:04</td>   <td>-13977</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@14ba872]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
-<tr bgcolor="67c1fc">  <td>18/10/16 17:58:40</td>   <td>22787</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@14ba872]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
->>>>>>> a891f8683da567a7074af89aa02c649393c4b565
+<tr bgcolor="687592">  <td>18/10/19 21:11:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@239963d8]">TCBA01101</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/19 21:11:49</td>   <td>4106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@239963d8]">TCBA01102</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/19 21:12:37</td>   <td>51858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@239963d8]">TCBA01103</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>18/10/19 21:11:34</td>   <td>-11122</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@239963d8]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="cbb882">  <td>18/10/19 21:12:39</td>   <td>54270</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@239963d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
 </table>
